force-app/main/default/objects/Account/fields/Account_Name_F__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_F__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name(F)</label>
    <type>Text</type>
</CustomField>