force-app/main/default/objects/Account/fields/Account_Selection__c.field-meta.xml
<CustomField>
    <fullName>Account_Selection__c</fullName>
    <defaultValue>&quot;LDG002&quot;</defaultValue>
    <label>Line Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive Brand</fullName>
                <label>PG01</label>
            </value>
            <value>
                <fullName>Mutli Brand</fullName>
                <label>PG02</label>
            </value>
            <value>
                <fullName>COCO</fullName>
                <label>PG03</label>
            </value>
            <value>
                <fullName>Institutional</fullName>
                <label>PG04</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <label>PG05</label>
            </value>
            <value>
                <fullName>Employee</fullName>
                <label>PG06</label>
            </value>
            <value>
                <fullName>Guest</fullName>
                <label>PG07</label>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
                <label>PG08</label>
            </value>
            <value>
                <fullName>LDG002</fullName>
                <default>true</default>
                <label>LDG002</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>