force-app/main/default/objects/Account/fields/Allocated_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Credit_Limit__c</fullName>
    <label>Allocated Credit Limit</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>