force-app/main/default/objects/Account/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <defaultValue>&quot;CENTRAL&quot;</defaultValue>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NORTH</fullName>
            </value>
            <value>
                <fullName>SOUTH</fullName>
            </value>
            <value>
                <fullName>EAST</fullName>
            </value>
            <value>
                <fullName>WEST</fullName>
            </value>
            <value>
                <fullName>CENTRAL</fullName>
                <default>true</default>
                <label>CENTRAL</label>
            </value>
            <value>
                <fullName>COCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>