force-app/main/default/objects/Account/fields/Billing_Address_F__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_F__c</fullName>
    <formula>BillingStreet +&apos; &apos;+  BillingCity  +&apos; &apos;+  BillingState +&apos; &apos;+  BillingCountry +&apos; &apos;+  BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address (F)</label>
    <type>Text</type>
</CustomField>