force-app/main/default/objects/Account/fields/Block_customer__c.field-meta.xml
<CustomField>
    <fullName>Block_customer__c</fullName>
    <label>Block customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>