force-app/main/default/objects/Account/fields/business_licensing_Number__c.field-meta.xml
<CustomField>
    <fullName>business_licensing_Number__c</fullName>
    <label>business licensing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>