force-app/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CG01</fullName>
                <label>CG-01- Exclusive Dealer</label>
            </value>
            <value>
                <fullName>CG02</fullName>
                <label>CG-02- Multi Brand Dealer</label>
            </value>
            <value>
                <fullName>CG13</fullName>
                <label>CG-013- Distributor</label>
            </value>
            <value>
                <fullName>CG05</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>