force-app/main/default/objects/Account/fields/Distance_approval_reason__c.field-meta.xml
<CustomField>
    <fullName>Distance_approval_reason__c</fullName>
    <label>Distance approval reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>