force-app/main/default/objects/Account/fields/Distance_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Distance_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distance Calculated?</label>
    <type>Checkbox</type>
</CustomField>