force-app/main/default/objects/Account/fields/Distance_Policy_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Distance_Policy_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distance Policy Approval Required</label>
    <type>Checkbox</type>
</CustomField>