force-app/main/default/objects/Account/fields/flowTriggerCheckbox__c.field-meta.xml
<CustomField>
    <fullName>flowTriggerCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>flowTriggerCheckbox</label>
    <type>Checkbox</type>
</CustomField>