force-app/main/default/objects/Account/fields/HMC_Achievement__c.field-meta.xml
<CustomField>
    <fullName>HMC_Achievement__c</fullName>
    <label>Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>