force-app/main/default/objects/Account/fields/HMC_Annual__c.field-meta.xml
<CustomField>
    <fullName>HMC_Annual__c</fullName>
    <label>Annual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>