force-app/main/default/objects/Account/fields/HMC_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>HMC_Annual_Volume__c</fullName>
    <label>Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>