force-app/main/default/objects/Account/fields/HMC_Any_other_income__c.field-meta.xml
<CustomField>
    <fullName>HMC_Any_other_income__c</fullName>
    <label>Any other income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>