force-app/main/default/objects/Account/fields/HMC_any_other_office_expenses__c.field-meta.xml
<CustomField>
    <fullName>HMC_any_other_office_expenses__c</fullName>
    <label>Any Other Office Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>