force-app/main/default/objects/Account/fields/HMC_ASP__c.field-meta.xml
<CustomField>
    <fullName>HMC_ASP__c</fullName>
    <label>ASP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>