force-app/main/default/objects/Account/fields/HMC_Average_Company_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>HMC_Average_Company_Outstanding__c</fullName>
    <label>Average Company Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>