force-app/main/default/objects/Account/fields/HMC_Average_market_outstanding__c.field-meta.xml
<CustomField>
    <fullName>HMC_Average_market_outstanding__c</fullName>
    <label>Average market outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>