force-app/main/default/objects/Account/fields/HMC_Average_paid_up_stock_value__c.field-meta.xml
<CustomField>
    <fullName>HMC_Average_paid_up_stock_value__c</fullName>
    <label>Average paid up stock value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>