force-app/main/default/objects/Account/fields/HMC_Bank_interest_on_Bank_Loan__c.field-meta.xml
<CustomField>
    <fullName>HMC_Bank_interest_on_Bank_Loan__c</fullName>
    <label>Bank Interest On Bank Loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>