force-app/main/default/objects/Account/fields/HMC_Bank_Intrest__c.field-meta.xml
<CustomField>
    <fullName>HMC_Bank_Intrest__c</fullName>
    <label>Bank Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>