force-app/main/default/objects/Account/fields/HMC_BoardingInitiationJourneykickOffDate__c.field-meta.xml
<CustomField>
    <fullName>HMC_BoardingInitiationJourneykickOffDate__c</fullName>
    <label>Boarding Initiation Journey kick OffDate</label>
    <type>Date</type>
</CustomField>