force-app/main/default/objects/Account/fields/HMC_BU_Type__c.field-meta.xml
<CustomField>
    <fullName>HMC_BU_Type__c</fullName>
    <label>BU Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hero</fullName>
            </value>
            <value>
                <fullName>Lectro</fullName>
            </value>
            <value>
                <fullName>Firefox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>