force-app/main/default/objects/Account/fields/HMC_Business_Experience__c.field-meta.xml
<CustomField>
    <fullName>HMC_Business_Experience__c</fullName>
    <label>Business experience in Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>