force-app/main/default/objects/Account/fields/HMC_Cash_Discount__c.field-meta.xml
<CustomField>
    <fullName>HMC_Cash_Discount__c</fullName>
    <label>Cash Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>