force-app/main/default/objects/Account/fields/HMC_Checklist_Completed__c.field-meta.xml
<CustomField>
    <fullName>HMC_Checklist_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark checked if all checklist completed.</inlineHelpText>
    <label>Checklist Completed?</label>
    <type>Checkbox</type>
</CustomField>