force-app/main/default/objects/Account/fields/HMC_COCO_Store__c.field-meta.xml
<CustomField>
    <fullName>HMC_COCO_Store__c</fullName>
    <formula>IF( OR(CONTAINS( Name , &apos;COCO&apos;),CONTAINS( Name , &apos;coco&apos;)) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COCO Store</label>
    <type>Checkbox</type>
</CustomField>