force-app/main/default/objects/Account/fields/HMC_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>HMC_Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>