force-app/main/default/objects/Account/fields/HMC_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>HMC_Contact_Number__c</fullName>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>