force-app/main/default/objects/Account/fields/HMC_Contact_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>HMC_Contact_Person_Name__c</fullName>
    <label>Contact Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>