force-app/main/default/objects/Account/fields/HMC_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>HMC_Credit_Limit__c</fullName>
    <defaultValue>100000</defaultValue>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>