force-app/main/default/objects/Account/fields/HMC_Current_Step__c.field-meta.xml
<CustomField>
    <fullName>HMC_Current_Step__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Current Step</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>