force-app/main/default/objects/Account/fields/HMC_Cycle_Brand_Trading_Done__c.field-meta.xml
<CustomField>
    <fullName>HMC_Cycle_Brand_Trading_Done__c</fullName>
    <label>Cycle Brand Trading Done</label>
    <type>TextArea</type>
</CustomField>