force-app/main/default/objects/Account/fields/HMC_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>HMC_Dealer_Code__c</fullName>
    <label>Customer Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>