force-app/main/default/objects/Account/fields/HMC_Deviation_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>HMC_Deviation_Approval_Status__c</fullName>
    <label>Deviation Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>