force-app/main/default/objects/Account/fields/HMC_Discount__c.field-meta.xml
<CustomField>
    <fullName>HMC_Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>