force-app/main/default/objects/Account/fields/HMC_Distribution_Margin_RDM__c.field-meta.xml
<CustomField>
    <fullName>HMC_Distribution_Margin_RDM__c</fullName>
    <label>Distribution Margin ( RDM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>