force-app/main/default/objects/Account/fields/HMC_Electricity__c.field-meta.xml
<CustomField>
    <fullName>HMC_Electricity__c</fullName>
    <label>Electricity</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>