force-app/main/default/objects/Account/fields/HMC_ExistingOtherHero_Brand_Cycle_Dealer__c.field-meta.xml
<CustomField>
    <fullName>HMC_ExistingOtherHero_Brand_Cycle_Dealer__c</fullName>
    <label>Existing Other Hero Brand Cycle  Dealer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>