force-app/main/default/objects/Account/fields/HMC_Expected_Regular_Monthly_Take_Off__c.field-meta.xml
<CustomField>
    <fullName>HMC_Expected_Regular_Monthly_Take_Off__c</fullName>
    <label>Expected Regular Monthly Take Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>