force-app/main/default/objects/Account/fields/HMC_First_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>HMC_First_Order_Quantity__c</fullName>
    <label>First Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>