force-app/main/default/objects/Account/fields/HMC_Freight_expenses__c.field-meta.xml
<CustomField>
    <fullName>HMC_Freight_expenses__c</fullName>
    <label>Freight expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>