force-app/main/default/objects/Account/fields/HMC_Grace_Days__c.field-meta.xml
<CustomField>
    <fullName>HMC_Grace_Days__c</fullName>
    <label>Grace Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>