force-app/main/default/objects/Account/fields/HMC_Incentive__c.field-meta.xml
<CustomField>
    <fullName>HMC_Incentive__c</fullName>
    <label>Incentive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>