force-app/main/default/objects/Account/fields/HMC_Income_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>HMC_Income_Tax_Return__c</fullName>
    <label>Income Tax Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>