force-app/main/default/objects/Account/fields/HMC_Legal_Proceeding__c.field-meta.xml
<CustomField>
    <fullName>HMC_Legal_Proceeding__c</fullName>
    <label>Legal Proceeding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>