force-app/main/default/objects/Account/fields/HMC_Line_Discount__c.field-meta.xml
<CustomField>
    <fullName>HMC_Line_Discount__c</fullName>
    <label>Line Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LDG001</fullName>
            </value>
            <value>
                <fullName>LDG002</fullName>
            </value>
            <value>
                <fullName>LDG003</fullName>
            </value>
            <value>
                <fullName>LDG005</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>