force-app/main/default/objects/Account/fields/HMC_Market_Reputation__c.field-meta.xml
<CustomField>
    <fullName>HMC_Market_Reputation__c</fullName>
    <label>Market Reputation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>