force-app/main/default/objects/Account/fields/HMC_Market_Reputation_Detail__c.field-meta.xml
<CustomField>
    <fullName>HMC_Market_Reputation_Detail__c</fullName>
    <label>Market Reputation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>