force-app/main/default/objects/Account/fields/HMC_Marketing_Power__c.field-meta.xml
<CustomField>
    <fullName>HMC_Marketing_Power__c</fullName>
    <label>Marketing Power</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>