force-app/main/default/objects/Account/fields/HMC_Money_Power__c.field-meta.xml
<CustomField>
    <fullName>HMC_Money_Power__c</fullName>
    <label>Money Power</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>