force-app/main/default/objects/Account/fields/HMC_Monthly_Earnings__c.field-meta.xml
<CustomField>
    <fullName>HMC_Monthly_Earnings__c</fullName>
    <label>Monthly Earnings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>