force-app/main/default/objects/Account/fields/HMC_Monthly_Sales__c.field-meta.xml
<CustomField>
    <fullName>HMC_Monthly_Sales__c</fullName>
    <label>Monthly Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>