force-app/main/default/objects/Account/fields/HMC_MonthlyTP__c.field-meta.xml
<CustomField>
    <fullName>HMC_MonthlyTP__c</fullName>
    <label>MonthlyTP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>