force-app/main/default/objects/Account/fields/HMC_MonthWiseVolumeCommitmentHeroCycle__c.field-meta.xml
<CustomField>
    <fullName>HMC_MonthWiseVolumeCommitmentHeroCycle__c</fullName>
    <label>Month Volume Commitment For FFX bikes</label>
    <type>TextArea</type>
</CustomField>