force-app/main/default/objects/Account/fields/HMC_NumberofyearsincycleTrade_Business__c.field-meta.xml
<CustomField>
    <fullName>HMC_NumberofyearsincycleTrade_Business__c</fullName>
    <label>Number Of Years In Cycle Trade Business</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>