force-app/main/default/objects/Account/fields/HMC_Other_Overheads__c.field-meta.xml
<CustomField>
    <fullName>HMC_Other_Overheads__c</fullName>
    <label>Other Overheads</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>