force-app/main/default/objects/Account/fields/HMC_Own_capital__c.field-meta.xml
<CustomField>
    <fullName>HMC_Own_capital__c</fullName>
    <label>Own capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>