force-app/main/default/objects/Account/fields/HMC_Pan_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>HMC_Pan_Card_Number__c</fullName>
    <label>Pan Card Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>