force-app/main/default/objects/Account/fields/HMC_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>HMC_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Partial Paid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>