force-app/main/default/objects/Account/fields/HMC_Physical_shipping_Done__c.field-meta.xml
<CustomField>
    <fullName>HMC_Physical_shipping_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical shipping Done</label>
    <type>Checkbox</type>
</CustomField>