force-app/main/default/objects/Account/fields/HMC_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>HMC_Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>