force-app/main/default/objects/Account/fields/HMC_Rent__c.field-meta.xml
<CustomField>
    <fullName>HMC_Rent__c</fullName>
    <label>Rent</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>