force-app/main/default/objects/Account/fields/HMC_Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>HMC_Residential_Address__c</fullName>
    <label>Residential Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>