force-app/main/default/objects/Account/fields/HMC_ROI_Calculation_Done__c.field-meta.xml
<CustomField>
    <fullName>HMC_ROI_Calculation_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROI Calculation Done</label>
    <type>Checkbox</type>
</CustomField>