force-app/main/default/objects/Account/fields/HMC_ROI_Score1__c.field-meta.xml
<CustomField>
    <fullName>HMC_ROI_Score1__c</fullName>
    <defaultValue>53</defaultValue>
    <label>ROI Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>