force-app/main/default/objects/Account/fields/HMC_Salary_of_Exclusive_Salesmen__c.field-meta.xml
<CustomField>
    <fullName>HMC_Salary_of_Exclusive_Salesmen__c</fullName>
    <label>Salary of Exclusive Salesmen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>