force-app/main/default/objects/Account/fields/HMC_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>HMC_Security_Deposit__c</fullName>
    <label>Security Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>