force-app/main/default/objects/Account/fields/HMC_Shop_in_Main_market__c.field-meta.xml
<CustomField>
    <fullName>HMC_Shop_in_Main_market__c</fullName>
    <label>Shop in Main market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>