force-app/main/default/objects/Account/fields/HMC_Stage__c.field-meta.xml
<CustomField>
    <fullName>HMC_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding Initiation</fullName>
            </value>
            <value>
                <fullName>Policy and Thank you Email</fullName>
            </value>
            <value>
                <fullName>ROI and legal Scrutiny</fullName>
            </value>
            <value>
                <fullName>RSM Recommendation</fullName>
            </value>
            <value>
                <fullName>Sales Head Approval</fullName>
                <label>Sales Head Approved</label>
            </value>
            <value>
                <fullName>Document Verification</fullName>
            </value>
            <value>
                <fullName>Closed Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>