force-app/main/default/objects/Account/fields/HMC_Store_Size__c.field-meta.xml
<CustomField>
    <fullName>HMC_Store_Size__c</fullName>
    <label>Store Size (in Sq Feet)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>